# autonomous-mobile-manipulation-in-simulation

./: .gitignore  LICENSE  README.md
.claude/: settings.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/amm_bringup/share/amm_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amm_bringup/share/amm_bringup/cmake/: amm_bringupConfig-version.cmake  amm_bringupConfig.cmake
install/amm_bringup/share/amm_bringup/config/: manipulation.yaml  nav2_params.yaml  navigation.yaml  slam_toolbox.yaml  task_planner.yaml
install/amm_description/share/amm_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amm_gazebo/share/amm_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amm_manipulation/include/amm_manipulation/: manipulation_manager_node.hpp
install/amm_manipulation/share/amm_manipulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amm_mission_manager/include/amm_mission_manager/: mission_manager_node.hpp
install/amm_mission_manager/share/amm_mission_manager/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amm_msgs/share/amm_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amm_navigation_manager/include/amm_navigation_manager/: navigation_manager_node.hpp
install/amm_navigation_manager/share/amm_navigation_manager/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amm_perception/include/amm_perception/: object_detector_node.hpp
install/amm_perception/share/amm_perception/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amm_slam_manager/include/amm_slam_manager/: slam_manager_node.hpp
install/amm_slam_manager/share/amm_slam_manager/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amm_task_planner/include/amm_task_planner/: task_planner_node.hpp
install/amm_task_planner/share/amm_task_planner/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/franka_description/share/franka_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ridgeback_description/share/ridgeback_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
log/: latest_build
src/amm_bringup/: CMakeLists.txt  package.xml
src/amm_bringup/config/: controllers.yaml  manipulation.yaml  nav2_params.yaml  navigation.yaml  slam_toolbox.yaml  task_planner.yaml
src/amm_bringup/launch/: simulation.launch.py
src/amm_description/: CMakeLists.txt  package.xml
src/amm_description/end_effectors/common/: ee_with_one_link.xacro  franka_hand.xacro  utils.xacro
src/amm_description/end_effectors/franka_hand/: franka_hand.urdf.xacro  franka_hand_arguments.xacro
src/amm_description/end_effectors/franka_hand_black/: inertials.yaml
src/amm_description/launch/: description.launch.py
src/amm_description/meshes/robot_ee/: franka_hand
src/amm_description/robots/common/: franka_arm.ros2_control.xacro  franka_arm.srdf.xacro  franka_arm.xacro  franka_robot.xacro  utils.xacro
src/amm_description/robots/fr3/: fr3.srdf.xacro  fr3.urdf.xacro
src/amm_description/urdf/: ridgeback.urdf.xacro  ridgeback_franka.urdf.xacro
src/amm_gazebo/: CMakeLists.txt  package.xml
src/amm_gazebo/config/: ros_gz_bridge.yaml
src/amm_gazebo/launch/: gazebo_sim.launch.py
src/amm_gazebo/worlds/: three_room.sdf
src/amm_manipulation/: CMakeLists.txt  package.xml
src/amm_manipulation/include/amm_manipulation/: manipulation_manager_node.hpp
src/amm_manipulation/src/: manipulation_manager_node.cpp
src/amm_mission_executive/: CMakeLists.txt  package.xml
src/amm_mission_executive/include/amm_mission_executive/: mission_executive_node.hpp
src/amm_mission_executive/src/: mission_executive_node.cpp
src/amm_mission_manager/: CMakeLists.txt  package.xml
src/amm_mission_manager/include/amm_mission_manager/: mission_manager_node.hpp
src/amm_mission_manager/src/: mission_manager_node.cpp
src/amm_msgs/: CMakeLists.txt  package.xml
src/amm_msgs/action/: ExecuteTask.action  PickObject.action  PlaceObject.action
src/amm_msgs/msg/: DetectedObject.msg  TaskCommand.msg
src/amm_navigation_manager/: CMakeLists.txt  package.xml
src/amm_navigation_manager/include/amm_navigation_manager/: navigation_manager_node.hpp
src/amm_navigation_manager/src/: navigation_manager_node.cpp
src/amm_perception/: CMakeLists.txt  package.xml
src/amm_perception/include/amm_perception/: object_detector_node.hpp
src/amm_perception/src/: object_detector_node.cpp
src/amm_slam_manager/: CMakeLists.txt  package.xml
src/amm_slam_manager/include/amm_slam_manager/: slam_manager_node.hpp
src/amm_slam_manager/src/: slam_manager_node.cpp
src/amm_task_planner/: CMakeLists.txt  package.xml
src/amm_task_planner/config/: task_planner.yaml
src/amm_task_planner/include/amm_task_planner/: task_planner_node.hpp
src/amm_task_planner/src/: task_planner_node.cpp
src/autonomous_mobile_manipulation/: CMakeLists.txt  package.xml
src/ridgeback_description/: CMakeLists.txt  package.xml
(+364 files in other folders)
