<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amm_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for the autonomous mobile manipulation system.</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>amm_task_planner</exec_depend>
  <exec_depend>amm_mission_executive</exec_depend>
  <exec_depend>amm_navigation_manager</exec_depend>
  <exec_depend>amm_perception</exec_depend>
  <exec_depend>amm_manipulation</exec_depend>
  <exec_depend>amm_slam_manager</exec_depend>
  <exec_depend>amm_description</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
