<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amm_description</name>
  <version>0.1.0</version>
  <description>
    Robot description for the Clearpath Ridgeback + Franka FR3 mobile manipulator.
    Self-contained: includes Ridgeback and FR3 xacros and meshes.
  </description>
  <maintainer email="leoandreae@gmail.com">Leonardo Andreae</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
