<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amm_perception</name>
  <version>0.1.0</version>
  <description>
    Perception node — locates objects by name and returns their 6-DoF pose.
    Supports two backends: 'gazebo' (TF/model-state lookup, CPU-only) and
    'isaac_sim' (grounding_dino + foundationpose vision pipeline, GPU).
  </description>
  <maintainer email="leoandreae@gmail.com">Leonardo Andreae</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>amm_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
