<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amm_task_planner</name>
  <version>0.1.0</version>
  <description>
    Task planner node — translates natural language prompts into structured TaskCommand
    messages using a local LLM via Ollama (free, runs on-device).
  </description>
  <maintainer email="leoandreae@gmail.com">Leonardo Andreae</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>amm_msgs</depend>
  <depend>std_msgs</depend>

  <!-- libcurl for Ollama HTTP calls -->
  <depend>libcurl-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
