<?xml version="1.0"?>
<package format="3">
  <name>ridgeback_description</name>
  <version>0.1.0</version>
  <description>Minimal Clearpath Ridgeback URDF for AMM simulation.</description>
  <maintainer email="leoandreae@gmail.com">Leonardo Andreae</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
